erDiagram

    USERS {
        string id PK
        string full_name
        string email
        string password_hash
        string role
        datetime created_at
        datetime updated_at
    }

    AI_MODELS {
        string id PK
        string user_id FK
        string name
        string provider
        string endpoint_url
        string model_name
        datetime created_at
        datetime updated_at
    }

    SCENARIOS {
        string id PK
        string attack_type
        text prompt
        text expected_behavior
        string severity
        string scenario_code
        datetime created_at
        datetime updated_at
    }

    ATTACK_RUNS {
        string id PK
        string user_id FK
        string model_provider
        string model_name
        string selected_attack_types
        string status
        datetime completed_at
        int duration_seconds
        boolean overall_passed
        int overall_risk_score
        string overall_risk_level
        int overall_total_count
        int overall_safe_count
        int overall_unsafe_count
        text overall_evidence_summary
        text overall_improvement
        datetime created_at
        datetime updated_at
    }

    ATTACK_RESULTS {
        string id PK
        string attack_run_id FK
        string attack_type
        string scenario_id
        string severity
        text model_response
        boolean passed
        int risk_score
        text evaluation_reason
        text improvement
        boolean response_safe_to_show
        text evidence_summary
        text unsafe_categories
        datetime created_at
        datetime updated_at
    }

    USERS ||--o{ AI_MODELS : owns
    USERS ||--o{ ATTACK_RUNS : launches
    ATTACK_RUNS ||--o{ ATTACK_RESULTS : stores
    SCENARIOS ||--o{ ATTACK_RESULTS : referenced_by_code
